# EoHrep

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.local.json
configs/: obp.yaml  obp_aligned.yaml
docs/: 01_architecture.md  02_data_spec.md  03_evaluation_protocol.md
eoh/: __init__.py  config.py  run.py
eoh/analysis/: __main__.py  diversity.py  similarity.py
eoh/ea/: evolution.py  loop.py  prompts.py  selection.py
eoh/eval/: sandbox.py
eoh/llm/: client.py  ollama.py  stub.py
eoh/tasks/: base.py  obp.py
eoh/util/: ckpt.py  code_extract.py  failure.py  logging.py  runmeta.py
tests/: test_code_extract.py  test_error_propagation.py  test_loop_stub.py  test_obp_eval.py  test_selection.py  test_similarity.py
