[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eoh-local"
version = "0.0.0"
description = "Local-LLM reproduction of Evolution of Heuristics (Liu et al., ICML 2024)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
eoh = "eoh.run:main"

[tool.hatch.build.targets.wheel]
packages = ["eoh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
